<resources>
    <string name="app_name">BakingApp</string>

    <string name="recipe_fragment">RECIPES_LIST_FRAGMENT</string>
    <string name="ingredient_fragment">INGREDIENT_FRAGMENT</string>
    <string name="step_fragment">STEP_FRAGMENT</string>

    <string name="shared_preference_name">BAKING_APP_SHARED_PREFERENCE</string>
    <string name="shared_preference_recipe">BAKING_APP_SHARED_PREFERENCE_RECIPE</string>

    <string name="recipe_intent_key">RECIPE_INTENT_KEY</string>
    <string name="detail_intent_key">DETAIL_INTENT_KEY</string>
    <string name="position_intent_key">POSITION_INTENT_KEY</string>
    <string name="count_intent_key">COUNT_INTENT_KEY</string>

    <string name="ingredient_detail_text">Ingredients</string>
    <string name="ingredient_name">Name</string>
    <string name="ingredient_measure">Measure</string>
    <string name="ingredient_quantity">Quantity</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="widget_default_text">Choose a recipe from the app first</string>
</resources>
